acm-root/namespaces/opssre/test/opssre-orderservices-preprod-asm/cs-service-preprod-internal-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cs-service-preprod-internal-vs-test
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-test-clusters
spec:
  hosts:
  - feitopssreaks001.feiaz.ferguson.com
  gateways:
  - opssre-gateway-test/internal-asm-gateway-test
  http:
  - match:
    - uri:
        prefix: "/opssre-orderservices-preprod/cs-service-preprod/"
    rewrite:
      uri: "/"
    route:
      - destination:
          host: cs-service-preprod-clusterip-svc.opssre-orderservices-preprod.svc.cluster.local
          port:
            number: 80
